Bug 1085008 - add comm-esr31

--- a/lxr.conf
+++ b/lxr.conf
@@ -104,6 +104,8 @@ sourceroot: comm-esr17 /data/mxr-data/comm-esr17/comm-esr17
 sourceprefix: comm-esr17 comm-esr17
 sourceroot: comm-esr24 /data/mxr-data/comm-esr24/comm-esr24
 sourceprefix: comm-esr24 comm-esr24
+sourceroot: comm-esr31 /data/mxr-data/comm-esr31/comm-esr31
+sourceprefix: comm-esr31 comm-esr31
 sourceroot: firefox /data/mxr-data/firefox/mozilla
 sourceprefix: firefox mozilla
 sourceroot: firefox2 /data/mxr-data/firefox2/mozilla
