--- a/lxr.conf
+++ b/lxr.conf
@@ -180,6 +180,8 @@ sourceroot: mozilla-b2g30_v1_4 /data/mxr-data/mozilla-b2g30_v1_4/mozilla-b2g30_v
 sourceprefix: mozilla-b2g30_v1_4 mozilla
 sourceroot: mozilla-b2g32_v2_0 /data/mxr-data/mozilla-b2g32_v2_0/mozilla-b2g32_v2_0
 sourceprefix: mozilla-b2g32_v2_0 mozilla
+sourceroot: mozilla-b2g34_v2_1 /data/mxr-data/mozilla-b2g34_v2_1/mozilla-b2g34_v2_1
+sourceprefix: mozilla-b2g34_v2_1 mozilla
 sourceroot: mozilla-central /data/mxr-data/mozilla-central/mozilla-central
 sourceprefix: mozilla-central mozilla
 sourceroot: mozilla-com /data/mxr-data/mozillasvn/svn.mozilla.org/projects/www.mozilla.com
