--- a/lxr.conf
+++ b/lxr.conf
@@ -182,6 +182,8 @@ sourceroot: mozilla-b2g32_v2_0 /data/mxr-data/mozilla-b2g32_v2_0/mozilla-b2g32_v
 sourceprefix: mozilla-b2g32_v2_0 mozilla
 sourceroot: mozilla-b2g34_v2_1 /data/mxr-data/mozilla-b2g34_v2_1/mozilla-b2g34_v2_1
 sourceprefix: mozilla-b2g34_v2_1 mozilla
+sourceroot: mozilla-b2g37_v2_2 /data/mxr-data/mozilla-b2g37_v2_2/mozilla-b2g37_v2_2
+sourceprefix: mozilla-b2g37_v2_2 mozilla
 sourceroot: mozilla-central /data/mxr-data/mozilla-central/mozilla-central
 sourceprefix: mozilla-central mozilla
 sourceroot: mozilla-com /data/mxr-data/mozillasvn/svn.mozilla.org/projects/www.mozilla.com
