Bug 1172099 - add mozilla-esr38 and comm-esr38

--- a/lxr.conf
+++ b/lxr.conf
@@ -106,6 +106,8 @@ sourceroot: comm-esr24 /data/mxr-data/comm-esr24/comm-esr24
 sourceprefix: comm-esr24 comm-esr24
 sourceroot: comm-esr31 /data/mxr-data/comm-esr31/comm-esr31
 sourceprefix: comm-esr31 comm-esr31
+sourceroot: comm-esr38 /data/mxr-data/comm-esr38/comm-esr38
+sourceprefix: comm-esr38 comm-esr38
 sourceroot: firefox /data/mxr-data/firefox/mozilla
 sourceprefix: firefox mozilla
 sourceroot: firefox2 /data/mxr-data/firefox2/mozilla
@@ -172,6 +174,8 @@ sourceroot: mozilla-esr24 /data/mxr-data/mozilla-esr24/mozilla-esr24
 sourceprefix: mozilla-esr24 mozilla
 sourceroot: mozilla-esr31 /data/mxr-data/mozilla-esr31/mozilla-esr31
 sourceprefix: mozilla-esr31 mozilla
+sourceroot: mozilla-esr38 /data/mxr-data/mozilla-esr38/mozilla-esr38
+sourceprefix: mozilla-esr38 mozilla
 sourceroot: mozilla-b2g28_v1_3 /data/mxr-data/mozilla-b2g28_v1_3/mozilla-b2g28_v1_3
 sourceprefix: mozilla-b2g28_v1_3 mozilla
 sourceroot: mozilla-b2g28_v1_3t /data/mxr-data/mozilla-b2g28_v1_3t/mozilla-b2g28_v1_3t
