Bug 1253141 - add mozilla-esr45

--- a/lxr.conf
+++ b/lxr.conf
@@ -171,6 +171,8 @@ sourceroot: mozilla-esr31 /data/mxr-data/mozilla-esr31/mozilla-esr31
 sourceprefix: mozilla-esr31 mozilla
 sourceroot: mozilla-esr38 /data/mxr-data/mozilla-esr38/mozilla-esr38
 sourceprefix: mozilla-esr38 mozilla
+sourceroot: mozilla-esr45 /data/mxr-data/mozilla-esr45/mozilla-esr45
+sourceprefix: mozilla-esr45 mozilla
 sourceroot: mozilla-b2g28_v1_3 /data/mxr-data/mozilla-b2g28_v1_3/mozilla-b2g28_v1_3
 sourceprefix: mozilla-b2g28_v1_3 mozilla
 sourceroot: mozilla-b2g28_v1_3t /data/mxr-data/mozilla-b2g28_v1_3t/mozilla-b2g28_v1_3t
