Bug 1259687 - add comm-esr45

--- a/lxr.conf
+++ b/lxr.conf
@@ -103,6 +103,8 @@ sourceroot: comm-esr31 /data/mxr-data/comm-esr31/comm-esr31
 sourceprefix: comm-esr31 comm-esr31
 sourceroot: comm-esr38 /data/mxr-data/comm-esr38/comm-esr38
 sourceprefix: comm-esr38 comm-esr38
+sourceroot: comm-esr45 /data/mxr-data/comm-esr45/comm-esr45
+sourceprefix: comm-esr45 comm-esr45
 sourceroot: firefox /data/mxr-data/firefox/mozilla
 sourceprefix: firefox mozilla
 sourceroot: firefox2 /data/mxr-data/firefox2/mozilla
