Move html templates to subdirectory

--- a/src/lxr.conf
+++ b/src/lxr.conf
@@ -20,22 +20,22 @@ bonsaihome: http://bonsai.mozilla.org
 
 # These are the templates for the HTML heading, directory listing and
 # footer, respectively.
-htmlhead: template-head
-htmltail: template-tail
-htmldir:  template-dir
+htmlhead: ./templates/template-head
+htmltail: ./templates/template-tail
+htmldir:  ./templates/template-dir
 
-sourcehead: template-source-head
-sourcetail: template-source-tail
-sourcedirhead: template-sourcedir-head
-sourcedirtail: template-sourcedir-tail
+sourcehead: ./templates/template-source-head
+sourcetail: ./templates/template-source-tail
+sourcedirhead: ./templates/template-sourcedir-head
+sourcedirtail: ./templates/template-sourcedir-tail
 
-treechooser: template-tree
-treeentry: template-tree-entry
+treechooser: ./templates/template-tree
+treeentry: ./templates/template-tree-entry
 
-revchooser: template-rev
-reventry: template-rev-entry
+revchooser: ./templates/template-rev
+reventry: ./templates/template-rev-entry
 
-identref: template-ident-fileref
+identref: ./templates/template-ident-fileref
 
 # If there's only one tree being indexed then allow this older
 # syntax for backward compatability. "sourceroot" should
