Update with Pale Moon XREF static files

--- a/src/lxr.conf
+++ b/src/lxr.conf
@@ -47,11 +47,11 @@ identref: ./templates/template-ident-fileref
 
 #XXX: PLEASE KEEP THIS LIST IN ALPHABETICAL ORDER!!! :XXX#
 
-sourceroot: tycho-trunk /srv/www/xref.palemoon.org/mxr-data/tycho-trunk/tycho
-sourceprefix: tycho-trunk tycho
-
 sourceroot: palemoon-trunk /srv/www/xref.palemoon.org/mxr-data/palemoon-trunk/palemoon
 sourceprefix: palemoon-trunk palemoon
+
+sourceroot: palemoon-rel27 /srv/www/xref.palemoon.org/mxr-data/palemoon-rel27/palemoon
+sourceprefix: palemoon-rel27 palemoon
 
 sourceroot: palemoon-rel26 /srv/www/xref.palemoon.org/mxr-data/palemoon-rel26/palemoon
 sourceprefix: palemoon-rel26 palemoon
@@ -73,6 +73,12 @@ sourceprefix: comm-esr38 comm
 
 sourceroot: mozilla-esr24 /srv/www/xref.palemoon.org/mxr-data/mozilla-esr24/mozilla
 sourceprefix: mozilla-esr24 mozilla
+
+sourceroot: devtools-trunk /srv/www/xref.palemoon.org/mxr-data/devtools-trunk/devtools
+sourceprefix: devtools-trunk devtools
+
+sourceroot: adblock-latitude-trunk /srv/www/xref.palemoon.org/mxr-data/adblock-latitude-trunk/adblock-latitude
+sourceprefix: adblock-latitude-trunk adblock-latitude
 
 #XXX: PLEASE KEEP THIS LIST IN ALPHABETICAL ORDER!!! :XXX#
 
