See [dccf3a3] on build system

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -50,6 +50,7 @@ build_func_preprocess(
     ${varBuildDefines}
     -DXREF_TARGET="moonchild"
     --marker %
+    --make-exec
 )
 
 COPY_TO_DIST("${SOURCE_FILES}")
