Use css from root path only and append superfluous eDate to allow best of both worlds in regards to CloudFlare caching

--- a/src/lib/LXR/Common.pm.in
+++ b/src/lib/LXR/Common.pm.in
@@ -1920,7 +1920,7 @@ sub stylesheets {
   my $index = 0 ;
   my $stylesheets;
   while ($stylesheet) {
-    $stylesheets .= "<link rel='$type' title='$title' href='$baseurl/style/$stylesheet' type='text/css'>\n" if $stylesheet;
+    $stylesheets .= "<link rel='$type' title='$title' href='/style/$stylesheet?@BUILD_EDATE@' type='text/css'>\n" if $stylesheet;
     $type = 'alternate stylesheet';
     return $stylesheets unless $stylesheet = stylesheet(++$index);
     $title = "Alt-$index";
