--- a/src/style/CMakeLists.txt
+++ b/src/style/CMakeLists.txt
@@ -2,21 +2,6 @@ build_macro_mkPaths()
 FIND_FINAL_TARGET()
 
 set(CSS_SRCS
-    ${mk_srcdir}/alt1-c.css
-    ${mk_srcdir}/alt1-cgi.css
-    ${mk_srcdir}/alt1-cpp.css
-    ${mk_srcdir}/alt1-idl.css
-    ${mk_srcdir}/alt1-mk.css
-    ${mk_srcdir}/alt1-pl.css
-    ${mk_srcdir}/alt1-pm.css
-    ${mk_srcdir}/alt2-cgi.css
-    ${mk_srcdir}/alt2-pl.css
-    ${mk_srcdir}/alt2-pm.css
-    ${mk_srcdir}/cgi.css
-    ${mk_srcdir}/h.css
-    ${mk_srcdir}/idl.css
-    ${mk_srcdir}/pl.css
-    ${mk_srcdir}/pm.css
     ${mk_srcdir}/style.css
 )
 
@@ -24,4 +9,23 @@ set(SOURCE_FILES
     ${CSS_SRCS}
 )
 
+set(SOURCE_PP_FILES
+    alt1-c.css.in
+    alt1-cgi.css.in
+    alt1-cpp.css.in
+    alt1-idl.css.in
+    alt1-mk.css.in
+    alt1-pl.css.in
+    alt1-pm.css.in
+    alt2-cgi.css.in
+    alt2-pl.css.in
+    alt2-pm.css.in
+    cgi.css.in
+    h.css.in
+    idl.css.in
+    pl.css.in
+    pm.css.in
+)
+
 COPY_TO_DIST("${SOURCE_FILES}")
+COMMON_PREPROCESS("${SOURCE_PP_FILES}")
