--- a/src/lib/LXR/Common.pm.in
+++ b/src/lib/LXR/Common.pm.in
@@ -1074,7 +1074,7 @@ sub markupfile {
 
   if ($name =~ /\.(?:java|idl)$/i) {
     @terms = @javaterm;
-  } elsif ($name =~ /\.(?:hh?|s|cpp?|c[cs]?|mm?|pch\+?\+?|fin|tbl|ipdlh?)$/i) { # Duplicated in genxref.
+  } elsif ($name =~ /\.(?:hh?|s|cpp?|c[cs]?|php?|mm?|pch\+?\+?|fin|tbl|ipdlh?)$/i) { # Duplicated in genxref.
     @terms = @cppterm;
   } elsif ($name =~ /\.(?:jsm?)(?:\.in|)$/) {
     @terms = @jsterm;
