Update search paths for config.json

--- a/src/xref-conf.py.in
+++ b/src/xref-conf.py.in
@@ -102,6 +102,8 @@ if os.path.exists(fileXREFJson):
     pathXREFJson = fileXREFJson
 elif os.path.exists('../' + fileXREFJson):
     pathXREFJson = '../' + fileXREFJson
+elif os.path.exists('../datastore/' + fileXREFJson):
+    pathXREFJson = '../datastore/' + fileXREFJson
 else:
     funcOutputMessage('errorGen', 'Could not find ' + fileXREFJson)
 
