Fix a typo in genxref and remove PHP from identifier search until it can be properly implemented. However, leave basic syntax highlighting enabled and also treat .build and .mozbuild as python

--- a/src/lib/LXR/Common.pm.in
+++ b/src/lib/LXR/Common.pm.in
@@ -1088,7 +1088,7 @@ sub markupfile {
     @terms = @dtdterm;
   } elsif ($name =~ /(configure|\.sh)$/) {
     @terms = @shterm;
-  } elsif ($name =~ /\.(?:py)$/) {
+  } elsif ($name =~ /\.(?:py|build|mozbuild)$/) {
     @terms = @pyterm;
   } elsif ($name =~ /\.(?:xml)$/) {
     @terms = @xmlterm;
