--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,9 @@ toolkit/devtools/chrome.manifest
 # Ignore misc files that need not be in the repo
 other-licenses/7zstub/firefox/7zSD - Copy.sfx.exe
 *.xpi
+
+# cross-reference
+.config.json
+lxr.conf
+index-last.php
+/base/tests/*
